headline alignment fixes

--- a/Umbraco.Belle/Belle/css/page.css
+++ b/Umbraco.Belle/Belle/css/page.css
@@ -28,18 +28,25 @@ a{color: #2E8AEA}
     padding: 15px;	
 }
 
-.umb-panel-header h1{margin: 0px; padding: 35px 0px 6px 0px;}
+.umb-panel-header h1{margin: 0px; padding: 27px 0px 14px 0px; height: 20px;}
+.umb-panel-header h1 i{visibility: hidden; margin-left: 15px; font-size: 70%; color: #000;}
+.umb-panel-header h1:hover i{visibility: visible;}
 .umb-panel-header .umb-btn-toolbar{text-align: right; position: absolute; top: 16px; right: 20px;}
 
-.umb-panel-header .umb-headline-editor{width: 500px; 
-    box-shadow: none; padding:4px; outline: none; 
-    margin-top: 22px; border: none; background: none; font-size: 18px;}
+.umb-panel-header .umb-headline-editor{
+    width: 500px; 
+    box-shadow: none; padding:4px 0px 4px 0px; outline: none; height: 20px; 
+    margin-top: 22px; border: none; background: none; font-size: 18px;
+    border-bottom: 1px dashed #b3b3b3;
+}
 
 .umb-headline-editor:focus, .umb-headline-editor:active, .umb-headline-editor:hover{
     outline:0px !important;
     -webkit-appearance:none !Important;
     outline-width: 0;
     outline-style: none;
+    box-shadow: none !Important;
+
 }  
 
 .float-left{float: left;}
